correction overflow

--- a/btn.css
+++ b/btn.css
@@ -1,4 +1,5 @@
 .btn{
+  /* justify-content: space-between; */
   position: relative;
   text-align: center;
   margin-top: 50px;
@@ -6,11 +7,11 @@
 }
 .container-button{
     position: absolute;
-    transform: translateY('-50%');
+    /* transform: translateY('-50%'); */
     /* width: 250px; */
-    text-align: center;
-    margin-top: 0px;
-    margin-left: -50px;
+    /* text-align: center;
+    margin-top: 0px; */
+    /* margin-left: -50px; */
   }
   .button{
     width: 100px;
